test: add Font Size Slider and translations

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -215,6 +215,7 @@
     "End Tour": "End Tour",
     "Add this space to your Favorite Spaces": "Add this space to your Favorite Spaces",
     "Synchronization": "Synchronization",
-    "Cancel Synchronization": "Cancel Synchronization"
+    "Cancel Synchronization": "Cancel Synchronization",
+    "Font Size": "Font Size"
   }
 }
