--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -214,6 +214,7 @@
     "Close Tour": "Fermer le Tour",
     "End Tour": "Finir le Tour",
     "Synchronization": "Synchronisation",
-    "Cancel Synchronization": "Annuler la Synchronisation"
+    "Cancel Synchronization": "Annuler la Synchronisation",
+    "Font Size": "Taille du Texte"
   }
 }
