refactor: rename action over time widget title

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -40,6 +40,7 @@
     "Dashboard": "Dashboard",
     "Action Type Chart": "Action Type Chart",
     "Total Action Count": "Total Action Count",
+    "Action Count Over Time": "Action Count Over Time",
     "Action Count Per Space": "Action Count Per Space",
     "Action Database": "Action Database",
     "No action has been recorded.": "No action has been recorded.",
